# yt-music

./: README.md  app.py  download_mp3.py  pyproject.toml
json/: video_info.json  video_song_info.json
json_examples/: playlist_info.json
src/yt_music/: __init__.py  download.py
src/yt_music/utils/: tags.py
tools/: append_track_numbers.py  copy_mp3_files.py
ui/: app.py  download_mp3.ui  download_mp3_ui.py
utils/: tag_utils.py  ytdlp_utils.py
yt-music-download/: download_mp3.py  tag_utils.py
yt-music-download.py/: download-mp3.py  download_mp3.py  ytdlp_utils.py
