[project]
name = "yt-music"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "MSaldana362", email = "msaldana362@gmail.com" }
]
requires-python = ">=3.10"
dependencies = [
    "eyed3>=0.9.9",
    "pyqt5>=5.15.11",
    "requests>=2.33.0",
    "yt-dlp>=2026.3.17",
]

[build-system]
requires = ["uv_build>=0.9.28,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pyinstaller>=6.19.0",
]
